--- a/sass/gallery.scss
+++ b/sass/gallery.scss
@@ -6,6 +6,8 @@ $dark-grey: #A9A9A9;
 $dark-blue: #1A2930;
 $highlight-red: #DE1B1B;
 
+img {width: 100%}
+
 .innerpage_gallery {
 	display: grid;
 	grid-template-columns: 1fr 1fr 12fr 1fr 1fr;
@@ -138,7 +140,56 @@ $highlight-red: #DE1B1B;
 	padding: 0 20px;
 }
 
+.innerpage_web_detail {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: auto;
+  	grid-auto-flow: row dense;
+	border-left: 1px solid #DFDCE3;
+	border-right: 1px solid #DFDCE3;
+	padding: 2.5em 5em;
+	grid-gap: 3em;
+}
 
+.portfolio_link{
+	color:white;
+	padding: 2px 10px;
+	background-color: $highlight-red;
+	justify-self: center;
+	font-size: 2.3em;
+	font-weight: 700;
+
+	&:hover{
+	opacity: 0.8;
+	padding: 3px 15px;
+	transition: all .5s ease-in-out;
+	}
+}
+.portfolio_section_title {
+	font-weight: 700;
+	font-size: 2em;
+	text-transform: uppercase;
+	background-color: $highlight-red;
+	width: 5em;
+	text-align: center;
+	color: white;
+}
+.portfolio_skill_list {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	align-items: center;
+	list-style: none;
+	font: 100% $secondary-font;
+	padding: 0;
+}
+
+
+
+.portfolio_image_fox {padding:0 2em;}
+
+.portfolio_paragraph {
+	padding: 2em 7em;
+}
 
 @media only screen and (max-width: 700px) {
     .body_gallery {
